--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8000
 
 # Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/TechFood
-spring.datasource.username=root
-spring.datasource.password=123
+spring.datasource.username=${POSTGRES_USER:root}
+spring.datasource.password=${POSTGRES_PASSWORD:root}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
