--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=TechFood
 server.port=8000
 
 # Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/TechFood
+spring.datasource.url=jdbc:postgresql://${DATABASE_HOST:localhost}:${DATABASE_PORT:5432}/TechFood
 spring.datasource.username=${POSTGRES_USER:root}
 spring.datasource.password=${POSTGRES_PASSWORD:root}
 spring.datasource.driver-class-name=org.postgresql.Driver
