--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
 
-  postgres:
+  db:
     image: postgres:17.5-alpine
     restart: no
     shm_size: 128mb
@@ -10,17 +10,17 @@ services:
       POSTGRES_USER: ${POSTGRES_USER:-root}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-root}
       POSTGRES_DB: TechFood
-    profiles:
-      - dev
-      - prod
+#    profiles:
+#      - dev
+#      - prod
 
   adminer:
     image: adminer
     restart: no
     ports:
-      - "8080:8081"
-    profiles:
-      - dev
+      - "8080:8080"
+#    profiles:
+#      - dev
 
   app:
     build:
@@ -33,6 +33,6 @@ services:
       DATABASE_HOST: postgres
       DATABASE_PORT: 5432
     depends_on:
-      - postgres
+      - db
     profiles:
       - prod
