--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,17 +10,17 @@ services:
       POSTGRES_USER: ${POSTGRES_USER:-root}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-root}
       POSTGRES_DB: TechFood
-#    profiles:
-#      - dev
-#      - prod
+    profiles:
+      - dev
+      - prod
 
   adminer:
     image: adminer
     restart: no
     ports:
       - "8080:8080"
-#    profiles:
-#      - dev
+    profiles:
+      - dev
 
   app:
     build:
