--- a/k8s/v1/tech-food-configmap-v1.yaml
+++ b/k8s/v1/tech-food-configmap-v1.yaml
@@ -12,8 +12,8 @@ data:
   SPRING_JPA_HIBERNATE_DDL_AUTO: "update"
   SPRING_JPA_SHOW_SQL: "false"
   SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: "org.hibernate.dialect.PostgreSQLDialect"
-  DATABASE_HOST: "host.minikube.internal"
+  DATABASE_HOST: "192.168.0.4"
   DATABASE_PORT: "5432"
   DATABASE_NAME: "TechFood"
-  SPRING_DATASOURCE_URL: "jdbc:postgresql://host.minikube.internal:5432/TechFood"
+  SPRING_DATASOURCE_URL: "jdbc:postgresql://192.168.0.4:5432/TechFood"
   SPRING_DATASOURCE_DRIVER_CLASS_NAME: "org.postgresql.Driver"
