--- a/k8s/v1/tech-food-deployment-v1.yaml
+++ b/k8s/v1/tech-food-deployment-v1.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: techfood
-          image: techfood:v1
+          image: techfood:v2
           imagePullPolicy: Never
           ports:
             - containerPort: 8000
@@ -33,3 +33,19 @@ spec:
             limits:
               memory: "512Mi"
               cpu: "500m"
+          livenessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8000
+            initialDelaySeconds: 60
+            periodSeconds: 30
+            timeoutSeconds: 10
+            failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8000
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
