--- a/k8s/v1/tech-food-configmap-v1.yaml
+++ b/k8s/v1/tech-food-configmap-v1.yaml
@@ -8,4 +8,4 @@ metadata:
     version: v1
 data:
   SERVER_PORT: "8000"
-  SPRING_DATASOURCE_URL: "jdbc:postgresql://CHANGE_ME_TO_YOUR_LOCAL_IP:5432/TechFood"
+  SPRING_DATASOURCE_URL: "jdbc:postgresql://${HOST_IP}:5432/TechFood"
