[wip] feat: add GitHub Actions workflow for deploying application to EKS

--- a/k8s/v1/tech-food-deployment-v1.yaml
+++ b/k8s/v1/tech-food-deployment-v1.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: techfood
-          image: techfood:v2
+          image: DOCKER_IMAGE_PLACEHOLDER
           imagePullPolicy: Never
           ports:
             - containerPort: 8000
