--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -60,8 +60,8 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
           sed -i.bak "s|DOCKER_IMAGE_PLACEHOLDER|${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}|g" k8s/tech-food-deployment-v1.yaml
-          kubectl apply -f k8s/tech-food-configmap-v1.yaml
-          kubectl apply -f k8s/tech-food-db-secret-v1.yaml
-          kubectl apply -f k8s/tech-food-deployment-v1.yaml
-          kubectl apply -f k8s/tech-food-service-v1.yaml
-          kubectl apply -f k8s/tech-food-hpa-v1.yaml
+          kubectl apply -f k8s/v1/tech-food-configmap-v1.yaml
+          kubectl apply -f k8s/v1/tech-food-db-secret-v1.yaml
+          kubectl apply -f k8s/v1/tech-food-deployment-v1.yaml
+          kubectl apply -f k8s/v1/tech-food-service-v1.yaml
+          kubectl apply -f k8s/v1/tech-food-hpa-v1.yaml
