--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,11 +18,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-#      - name: Set up JDK 21
-#        uses: actions/setup-java@v4
-#        with:
-#          java-version: '21'
-#          distribution: 'temurin'
+      - name: Set up JDK 24
+        uses: actions/setup-java@v4
+        with:
+          java-version: '24'
+          distribution: 'temurin'
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
