--- a/k8s/v1/tech-food-db-secret-v1.yaml
+++ b/k8s/v1/tech-food-db-secret-v1.yaml
@@ -8,5 +8,5 @@ metadata:
     version: v1
 type: Opaque
 data:
-  POSTGRES_USER: "cm9vdA=="
-  POSTGRES_PASSWORD: "cm9vdA=="
+  POSTGRES_USER: ZGJtYXN0ZXIK
+  POSTGRES_PASSWORD: YnBMI1ljZyRxNG4jaFFRXkQkNWU=
