--- a/k8s/v1/tech-food-hpa-v1.yaml
+++ b/k8s/v1/tech-food-hpa-v1.yaml
@@ -2,13 +2,14 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: tech-food-hpa
+  namespace: techfood
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
     name: tech-food-deployment-v1
   minReplicas: 1
-  maxReplicas: 4
+  maxReplicas: 2
   metrics:
     - type: Resource
       resource:
