--- a/k8s/v1/tech-food-service-v1.yaml
+++ b/k8s/v1/tech-food-service-v1.yaml
@@ -2,12 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: tech-food-service
+  namespace: techfood
 spec:
   selector:
     app: techfood
   ports:
     - port: 80
       targetPort: 8000
-      nodePort: 30000
-  type: NodePort
-  
+  type: LoadBalancer
