atualizando k8s e adicionando namespace

--- a/k8s/v1/tech-food-db-secret-v1.yaml
+++ b/k8s/v1/tech-food-db-secret-v1.yaml
@@ -2,11 +2,12 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: tech-food-db-secret-v1
+  namespace: techfood
   labels:
     app: tech-food-db-secret-v1
     component: secrets
     version: v1
 type: Opaque
 data:
-  POSTGRES_USER: "cm9vdA=="
-  POSTGRES_PASSWORD: "cm9vdA=="
+  POSTGRES_USER: "ZGJtYXN0ZXIK"
+  POSTGRES_PASSWORD: "YnBMI1ljZyNoUVFeRGUK"
