--- a/k8s/v1/tech-food-configmap-v1.yaml
+++ b/k8s/v1/tech-food-configmap-v1.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: tech-food-configmap-v1
+  namespace: techfood
   labels:
     app: tech-food-configmap-v1
     component: config
     version: v1
 data:
-  SERVER_PORT: "8000"
-  SPRING_DATASOURCE_URL: "jdbc:postgresql://${HOST_IP}:5432/TechFood"
+  SPRING_DATASOURCE_URL: "jdbc:postgresql://tech-food.c34qiakmaq1a.us-east-1.rds.amazonaws.com/techfood"
