Add annotations for AWS Load Balancer configuration

--- a/k8s/v1/tech-food-service-v1.yaml
+++ b/k8s/v1/tech-food-service-v1.yaml
@@ -3,6 +3,10 @@ kind: Service
 metadata:
   name: tech-food-service
   namespace: techfood
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: nlb
+    service.beta.kubernetes.io/aws-load-balancer-name: "my-custom-nlb-name"
+            
 spec:
   selector:
     app: techfood
