adiciona senha correta

--- a/k8s/v1/tech-food-db-secret-v1.yaml
+++ b/k8s/v1/tech-food-db-secret-v1.yaml
@@ -10,4 +10,4 @@ metadata:
 type: Opaque
 data:
   POSTGRES_USER: "ZGJtYXN0ZXIK"
-  POSTGRES_PASSWORD: "YnBMI1ljZyNoUVFeRGUK"
+  POSTGRES_PASSWORD: "YnBMI1ljZyRxNG4jaFFRXkQkNWU="
