muda user do banco

--- a/k8s/v1/tech-food-deployment-v1.yaml
+++ b/k8s/v1/tech-food-deployment-v1.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: techfood
           image: DOCKER_IMAGE_PLACEHOLDER
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports:
             - containerPort: 8000
           envFrom:
