--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,15 +5,18 @@ on:
     branches:
       - main
 
+env:
+  AWS_REGION: us-east-1
+  ECR_REPOSITORY: techfood
+  EKS_CLUSTER_NAME: eks-terraform-tech-food
+  IMAGE_TAG: latest
+
 jobs:
-  deploy:
-    name: Deploy to EKS
+  build:
+    name: Build and Push Image
     runs-on: ubuntu-latest
-    env:
-      AWS_REGION: us-east-1
-      ECR_REPOSITORY: techfood
-      EKS_CLUSTER_NAME: eks-terraform-tech-food
-      IMAGE_TAG: latest
+    outputs:
+      image-uri: ${{ steps.build-image.outputs.image-uri }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -29,7 +32,6 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
-#          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
@@ -37,11 +39,7 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build with Maven
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: ./mvnw clean package -DskipTests
-#          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./Dockerfile .
-#          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
@@ -50,14 +48,27 @@ jobs:
         run: |
           docker build --no-cache -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-#          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+          echo "image-uri=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+
+  deploy:
+    name: Deploy to EKS
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Set up kubectl for EKS
         run: aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER_NAME }} --region ${{ env.AWS_REGION }}
 
       - name: Deploy to EKS
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
           kubectl delete namespace techfood --ignore-not-found=true
           kubectl wait --for=delete namespace/techfood --timeout=120s || true
@@ -65,7 +76,7 @@ jobs:
 
           sleep 5
 
-          sed -i.bak "s|DOCKER_IMAGE_PLACEHOLDER|${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}|g" k8s/v1/tech-food-deployment-v1.yaml
+          sed -i.bak "s|DOCKER_IMAGE_PLACEHOLDER|${{ needs.build.outputs.image-uri }}|g" k8s/v1/tech-food-deployment-v1.yaml
           kubectl apply -f k8s/v1/tech-food-configmap-v1.yaml
           kubectl apply -f k8s/v1/tech-food-db-secret-v1.yaml
           kubectl apply -f k8s/v1/tech-food-deployment-v1.yaml
